--- a/angular.json
+++ b/angular.json
@@ -21,10 +21,7 @@
             "polyfills": "apps/cz-app/src/polyfills.ts",
             "tsConfig": "apps/cz-app/tsconfig.app.json",
             "aot": true,
-            "assets": [
-              "apps/cz-app/src/favicon.ico",
-              "apps/cz-app/src/assets"
-            ],
+            "assets": ["apps/cz-app/src/favicon.ico", "apps/cz-app/src/assets"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "apps/cz-app/src/styles.scss"
@@ -86,10 +83,7 @@
               "apps/cz-app/tsconfig.app.json",
               "apps/cz-app/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/cz-app/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/cz-app/**/*"]
           }
         },
         "test": {
@@ -124,14 +118,41 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "apps/cz-app-e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/cz-app-e2e/**/*"
-            ]
+            "tsConfig": ["apps/cz-app-e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**", "!apps/cz-app-e2e/**/*"]
           }
+        }
+      }
+    },
+    "card": {
+      "projectType": "library",
+      "root": "libs/card",
+      "sourceRoot": "libs/card/src",
+      "prefix": "mf-app",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/card/tsconfig.lib.json",
+              "libs/card/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/card/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/card/jest.config.js",
+            "tsConfig": "libs/card/tsconfig.spec.json",
+            "passWithNoTests": true,
+            "setupFile": "libs/card/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "style": "scss"
         }
       }
     }
