--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --stats-json",
+    "analyze": "webpack-bundle-analyzer dist/apps/cz-app/stats.json",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
