--- a/nx.json
+++ b/nx.json
@@ -31,6 +31,13 @@
     },
     "card": {
       "tags": []
+    },
+    "home": {
+      "tags": []
+    },
+    "home-e2e": {
+      "tags": [],
+      "implicitDependencies": ["home"]
     }
   }
 }
