--- a/angular.json
+++ b/angular.json
@@ -278,6 +278,129 @@
           }
         }
       }
+    },
+    "aboutus": {
+      "projectType": "application",
+      "schematics": {
+        "@nrwl/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "apps/aboutus",
+      "sourceRoot": "apps/aboutus/src",
+      "prefix": "mf-app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/aboutus",
+            "index": "apps/aboutus/src/index.html",
+            "main": "apps/aboutus/src/main.ts",
+            "polyfills": "apps/aboutus/src/polyfills.ts",
+            "tsConfig": "apps/aboutus/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "apps/aboutus/src/favicon.ico",
+              "apps/aboutus/src/assets"
+            ],
+            "styles": ["apps/aboutus/src/styles.scss"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/aboutus/src/environments/environment.ts",
+                  "with": "apps/aboutus/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "aboutus:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "aboutus:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "aboutus:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/aboutus/tsconfig.app.json",
+              "apps/aboutus/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/aboutus/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "apps/aboutus/jest.config.js",
+            "tsConfig": "apps/aboutus/tsconfig.spec.json",
+            "passWithNoTests": true,
+            "setupFile": "apps/aboutus/src/test-setup.ts"
+          }
+        }
+      }
+    },
+    "aboutus-e2e": {
+      "root": "apps/aboutus-e2e",
+      "sourceRoot": "apps/aboutus-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/aboutus-e2e/cypress.json",
+            "tsConfig": "apps/aboutus-e2e/tsconfig.e2e.json",
+            "devServerTarget": "aboutus:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "aboutus:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["apps/aboutus-e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**", "!apps/aboutus-e2e/**/*"]
+          }
+        }
+      }
     }
   },
   "cli": {
