--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "postinstall": "ngcc",
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build --prod --stats-json",
+    "build:external": "ng build --extra-webpack-config apps/home/webpack.externals.js --prod --stats-json",
     "build-home": "ng build --project=home --prod --stats-json",
     "build-aboutus": "ng build --project=aboutus --prod --stats-json",
     "analyze": "webpack-bundle-analyzer dist/apps/cz-app/stats.json",
+    "analyze-home": "webpack-bundle-analyzer dist/apps/home/stats.json",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
@@ -28,15 +30,20 @@
     "update": "ng update @nrwl/workspace",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "postinstall:bak": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "build:home:externals": "ng build --extra-webpack-config apps/home/webpack.externals.js --output-hashing none --project home --prod --single-bundle --stats-json",
+    "build:home": "ng build --prod --project home --output-hashing none --single-bundle true --bundle-styles false"
   },
   "private": true,
   "dependencies": {
+    "@angular-extensions/elements": "^10.0.2",
     "@angular/animations": "^10.0.0",
     "@angular/cdk": "^10.1.3",
     "@angular/common": "^10.0.0",
     "@angular/compiler": "^10.0.0",
     "@angular/core": "^10.0.0",
+    "@angular/elements": "^10.0.14",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "^10.0.0",
     "@angular/material": "^10.1.3",
@@ -44,6 +51,9 @@
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
     "@nrwl/angular": "10.0.12",
+    "@webcomponents/custom-elements": "^1.4.2",
+    "@webcomponents/webcomponentsjs": "^2.4.4",
+    "ngx-build-plus": "^10.1.1",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
   },
