--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,22 @@
               "node_modules/@angular/elements/bundles/elements.umd.js",
               "node_modules/@angular/router/bundles/router.umd.js",
               "node_modules/@angular/platform-browser/bundles/platform-browser.umd.js",
-              "node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"
+              "node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js",
+
+              "node_modules/@angular/cdk/bundles/cdk.umd.js",
+              "node_modules/@angular/cdk/bundles/cdk-keycodes.umd.js",
+              "node_modules/@angular/cdk/bundles/cdk-coercion.umd.js",
+              "node_modules/@angular/cdk/bundles/cdk-observers.umd.js",
+              "node_modules/@angular/cdk/bundles/cdk-platform.umd.js",
+              "node_modules/@angular/cdk/bundles/cdk-bidi.umd.js",
+              "node_modules/@angular/cdk/bundles/cdk-a11y.umd.js",
+
+              "node_modules/@angular/animations/bundles/animations.umd.js",
+              "node_modules/@angular/animations/bundles/animations-browser.umd.js",
+              "node_modules/@angular/platform-browser/bundles/platform-browser-animations.umd.js",
+              "node_modules/@angular/material/bundles/material.umd.js",
+              "node_modules/@angular/material/bundles/material-core.umd.js",
+              "node_modules/@angular/material/bundles/material-button.umd.js"
             ]
           },
           "configurations": {
