--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,9 @@
               "node_modules/@angular/elements/bundles/elements.umd.js",
               "node_modules/@angular/router/bundles/router.umd.js",
               "node_modules/@angular/platform-browser/bundles/platform-browser.umd.js",
-              "node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"
+              "node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js",
+              "node_modules/ag-grid-community/dist/ag-grid-community.js",
+              "node_modules/ag-grid-angular/bundles/ag-grid-angular.umd.js"
             ]
           },
           "configurations": {
