--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@nrwl/nx-cloud": "^10.0.0",
     "@webcomponents/custom-elements": "^1.4.2",
     "@webcomponents/webcomponentsjs": "^2.4.4",
+    "ag-grid-angular": "^24.0.0",
+    "ag-grid-community": "^24.0.0",
     "ngx-build-plus": "^10.1.1",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
